# skyhookdm-arrow

./: .gitignore  .travis.yml  docker-compose.yml
.github/workflows/: benchmark.yml  cpp.yml  docs.yml  python.yml  skyhook-ci.yml
ci/docker/: conda.dockerfile  debian-10-cpp.dockerfile  linux-apt-jni.dockerfile  skyhook.dockerfile  ubuntu-14.04-cpp.dockerfile  ubuntu-18.04-cpp.dockerfile  ubuntu-20.04-cpp.dockerfile
ci/scripts/: cpp_build.sh  demo.sh  generate_dataset.py  install_ceph.sh  integration_ceph.sh  integration_skyhook.sh  skyhook_build.sh  skyhook_test_data.parquet
cpp/: CMakeLists.txt
cpp/cmake_modules/: DefineOptions.cmake  FindArrowCls.cmake  FindArrowSkyhook.cmake  Findlibrados.cmake  ThirdpartyToolchain.cmake
cpp/examples/arrow/: CMakeLists.txt
cpp/examples/minimal_build/: system_dependency.dockerfile
cpp/src/arrow/: CMakeLists.txt
cpp/src/arrow/adapters/arrow-rados-cls/: CMakeLists.txt  README.md  cls_arrow.cc  cls_arrow_test.cc  deploy.md  script.sh  wf.yml
cpp/src/arrow/adapters/arrow-rados-cls/docker/: Dockerfile  script.sh
cpp/src/arrow/adapters/arrow-rados-cls/docker/release/: Dockerfile  script.sh
cpp/src/arrow/adapters/arrow-rados-cls/docs/: architecture.md  benchmarking.md  contributing.md  deploy.md  hands_on.md
cpp/src/arrow/adapters/arrow-rados-cls/docs/source/: index.rst
cpp/src/arrow/adapters/arrow-rados-cls/scripts/: bench.py  build.sh  deploy_ceph.sh  deploy_data.sh  deploy_skyhook.sh  prepare.sh  test.sh
cpp/src/arrow/adapters/cls/scripts/: build.sh  test.sh
cpp/src/arrow/adapters/cls/src/: cls_arrow_test.cc
cpp/src/arrow/adapters/skyhookdm-ceph-cls/: CMakeLists.txt  cls_arrow.cc  cls_arrow_test.cc  cls_arrow_test_utils.cc  cls_arrow_test_utils.h
cpp/src/arrow/adapters/skyhookdm-ceph-cls/scripts/: build-and-test.sh
cpp/src/arrow/adapters/skyhookdm-ceph-cls/src/: ArrowClsConfig.cmake.in  CMakeLists.txt  arrow-cls.pc.in  cls_arrow.cc  cls_arrow_test.cc
cpp/src/arrow/dataset/: CMakeLists.txt  api.h  dataset.h  dataset_rados.cc  dataset_rados.h  dataset_rados_test.cc  discovery.cc  discovery.h  file_base.cc  file_base.h  file_parquet.cc  file_parquet_rados.h  file_rados_parquet.cc  file_rados_parquet.h  file_rados_parquet_test.cc  file_skyhook.cc  file_skyhook.h  file_skyhook_test.cc  mockrados.cc  mockrados.h  rados.cc  rados.h  rados_format.cc  rados_format.h  rados_utils.cc  rados_utils.h  scanner.cc  scanner.h  scanner_internal.h  scanner_rados.cc  scanner_rados.h
cpp/src/arrow/dataset/proto/: scan_request.proto
cpp/src/arrow/filesystem/: rados_internal.cc  rados_internal.h
cpp/src/arrow/io/: memory.cc  memory.h
cpp/src/arrow/util/: rados_internal.cc  rados_internal.h
cpp/src/gandiva/jni/: CMakeLists.txt
cpp/src/jni/dataset/: CMakeLists.txt  jni_wrapper.cc
cpp/src/jni/orc/: CMakeLists.txt
cpp/src/plasma/: CMakeLists.txt
cpp/src/skyhook/: ArrowSkyhookConfig.cmake.in  CMakeLists.txt  arrow-skyhook.pc.in  skyhook.pc.in
cpp/src/skyhook/client/: CMakeLists.txt  file_skyhook.cc  file_skyhook.h  rados.cc
cpp/src/skyhook/cls/: cls_skyhook.cc  cls_skyhook_test.cc
cpp/src/skyhook/protocol/: ScanRequest.fbs  rados_internal.cc  rados_internal.h  rados_protocol.cc  rados_protocol.h  skyhook_protocol.cc  skyhook_protocol.h  skyhook_protocol_test.cc
cpp/src/skyhook/storage/: cls_skyhook.cc
dev/archery/archery/: cli.py
dev/tasks/: tasks.yml
dev/tasks/linux-packages/apache-arrow/apt/debian-bullseye/: Dockerfile
dev/tasks/linux-packages/apache-arrow/apt/debian-buster/: Dockerfile
dev/tasks/linux-packages/apache-arrow/apt/debian-stretch/: Dockerfile
dev/tasks/linux-packages/apache-arrow/apt/ubuntu-bionic/: Dockerfile
dev/tasks/linux-packages/apache-arrow/apt/ubuntu-focal/: Dockerfile
dev/tasks/linux-packages/apache-arrow/apt/ubuntu-groovy/: Dockerfile
dev/tasks/linux-packages/apache-arrow/apt/ubuntu-xenial/: Dockerfile
dev/tasks/linux-packages/apache-arrow/debian/: control  control.in
dev/tasks/linux-packages/apache-arrow/debian.ubuntu-xenial/: control
docs/source/cpp/api/: formats.rst
java/tools/src/main/java/org/apache/arrow/tools/: SkyhookFormat.java
python/: CMakeLists.txt  setup.py
python/pyarrow/: _dataset.pxd  _dataset.pyx  _dataset_skyhook.pxd  _dataset_skyhook.pyx  _rados.pxd  _rados.pyx  dataset.py  rados.py
python/pyarrow/includes/: libarrow_dataset.pxd  libarrow_dataset_skyhook.pxd
python/pyarrow/tests/: conftest.py  rados_parquet_example.py  test_dataset.py  test_rados_dataset.py  test_rados_parquet.py
